--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             let arrNew = [];
 
             for (i = 0; i < arr.length; i++) {
-                arrNew[i] = func(arr[i], arr.indexOf(arr[i]), arr);
+                arrNew[i] = func(arr[i], i, arr);
             }
 
             return arrNew;
@@ -41,7 +41,7 @@
             let arrNew = [];
 
             for (i = 0; i < arr.length; i++) {
-                if (func(arr[i], arr.indexOf(arr[i]), arr)) {
+                if (func(arr[i], i, arr)) {
                     arrNew.push(arr[i]);
                 }
             }
